cabal-version: 3.0
name:          example
version:       0.1.0
build-type:    Simple

common general
  build-depends:
    , base        ^>=4.20.2.0
    , bytestring  >=0.12.2    && <0.12.3
    , evdev       >=2.3.1     && <2.3.2
    , reflex      >= 0.9.4    && < 0.9.5
    , reflex-sdl2 >= 0.3.0    && < 0.3.1
    , sdl2        >= 2.5.5    && < 2.5.6
    , mtl         >= 2.3.1    && < 2.3.2

  default-language: Haskell2010
  ghc-options:
    -- enable warnings
    -Wall
    -- for SystemTimerManager
    -threaded

executable example
  import:         general
  main-is:        Main.hs
  hs-source-dirs: app

test-suite example-test
  import:         general
  main-is:        Spec.hs
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
