cabal-version: 3.0
name:          example
version:       0.1.0
build-type:    Simple

common general
  build-depends:
    , base
    , bytestring
    , evdev
    , gi-cairo
    , gi-cairo-connector
    , gi-cairo-render
    , gi-gdk
    , gi-gtk
    , reflex
    , reflex-gi-gtk
    , text

  default-language: Haskell2010
  ghc-options:
    -- enable warnings
    -Wall
    -- for SystemTimerManager
    -threaded

executable example
  import:         general
  main-is:        Main.hs
  hs-source-dirs: app

test-suite example-test
  import:         general
  main-is:        Spec.hs
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
